some alignment issues correction

--- a/css/style.css
+++ b/css/style.css
@@ -255,8 +255,8 @@ header i{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    
+    justify-content: center;
+    border-top: 1px solid var(--dark-purple);
 }
 .datetime .custom-link-info{
     text-align: center;
@@ -265,7 +265,8 @@ header i{
     cursor: pointer
 }
 .datetime .clock-display{
-    margin: 50px auto -25px;
+    margin-top: 50px;
+    margin-bottom: 30px;
     text-align: center;
     color: var(--dark-blue);      
 }
@@ -285,3 +286,12 @@ header i{
     font-size: 1.5em;
 }
 /* datetime section end */
+
+/* advertise section style section */
+
+.advertise{
+    border-top: 1px solid var(--dark-purple);
+    margin-left: 15px;
+}
+
+/* advertise section end */
